# gpui-chessboard

./: Cargo.toml  LICENSE  README.md
.cursor/: AGENTS.md
docs/: ARCHITECTURE.md  LAYOUT.md
examples/: demo.rs
src/: api.rs  board.rs  callbacks.rs  config.rs  drag.rs  draw.rs  eval.rs  fen.rs  lib.rs  move_format.rs  premove.rs  state.rs  types.rs  util.rs  view.rs
src/element/: anim.rs  eval_bar.rs  highlights.rs  layout.rs  mod.rs  pieces.rs  shapes.rs
src/geometry/: chess8x8.rs  layout.rs  mod.rs  rect.rs
