[package]
name = "gpui-chessboard"
version = "0.1.0"
edition = "2024"
description = "Embeddable GPUI chessboard widget for displaying positions and moves"
license = "GPL-3.0-or-later"

[lib]
name = "gpui_chessboard"
path = "src/lib.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }

[dev-dependencies]
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "b7e63cc29018c27bb24788ddb212f4cbdd861334" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "b7e63cc29018c27bb24788ddb212f4cbdd861334", package = "gpui-component-assets" }
